[package]
name = "sky_exp"
version = "0.1.0"
authors = ["sky <sky.wu@arsyun.com>"]
edition = "2018"
build = "build.rs"
repository = "https://github.com/filecoin-project/bellman"
#proc-macro = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fil_logger = "0.1"
log = "0.4"
rand = "0.7"

#fs2 = { version = "0.4.3", optional = true }
fs2 = { version = "0.4.3" }

tempfile = "3"
chrono = "0.4"
lazy_static = "1.4.0"

syn = "1.0.16"
quote = "1.0.3"
lib1 = { version = "0.1.0", path = "../lib1"}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempdir = "0.3"

[build-dependencies]
vergen = "3"



